<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.CreationActivity"
    tools:showIn="@layout/activity_creation">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/textViewPlantTip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/nameTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:backgroundTint="@color/darkGreen"
                    android:ems="10"
                    android:imeOptions="actionSearch"
                    android:inputType="textPersonName"
                    android:text="Мое растение"
                    android:textColor="@color/darkGreen" />

                <ImageButton
                    android:id="@+id/checkName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    app:srcCompat="@drawable/ic_search_black_24dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="Поиск советов по уходу" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/black_square"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/wateringCB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:buttonTint="@color/blue"
                        android:checked="true"
                        android:text="@string/watering"
                        android:textColor="#0F427A"
                        android:textColorLink="@color/blue" />


                    <TextView
                        android:id="@+id/wateringInf"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="---"
                        android:textColor="@color/blue"
                        android:textSize="24sp" />

                </LinearLayout>

                <SeekBar
                    android:id="@+id/wateringSB"
                    style="@android:style/Widget.DeviceDefault.Light.SeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_weight="13"
                    android:indeterminate="false"
                    android:max="30"
                    android:progress="3"
                    android:progressTint="@color/blue"
                    android:thumbTint="@color/blue" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/black_square"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/feedingCB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:buttonTint="@color/yellow"
                        android:checked="true"
                        android:text="@string/feeding"
                        android:textColor="#633F01"
                        android:textColorLink="@color/yellow" />

                    <TextView
                        android:id="@+id/feedingInf"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="---"
                        android:textColor="@color/yellow"
                        android:textSize="24sp" />


                </LinearLayout>

                <SeekBar
                    android:id="@+id/feedingSB"
                    style="@android:style/Widget.DeviceDefault.Light.SeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_weight="15"
                    android:indeterminate="false"
                    android:max="30"
                    android:progress="3"
                    android:progressTint="@color/yellow"
                    android:thumbTint="@color/yellow"></SeekBar>

            </LinearLayout>


            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/black_square"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/sprayingCB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:buttonTint="@color/colorMain"
                        android:checked="true"
                        android:text="@string/spraying"
                        android:textColor="#124D09"
                        android:textColorLink="@color/colorMain" />


                    <TextView
                        android:id="@+id/sprayingInf"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="---"
                        android:textColor="@color/colorMain"
                        android:textSize="24sp" />

                </LinearLayout>

                <SeekBar
                    android:id="@+id/sprayingSB"
                    style="@android:style/Widget.DeviceDefault.Light.SeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_weight="15"
                    android:indeterminate="false"
                    android:max="30"
                    android:progress="3"
                    android:progressTint="@color/colorMain"
                    android:thumbTint="@color/colorMain"></SeekBar>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/darkGreen"
                    android:drawableTint="@color/darkGreen"
                    android:hint="@string/notes"
                    android:textColorHighlight="@color/colorMain"
                    android:textColorLink="@color/colorMain" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>


</androidx.core.widget.NestedScrollView>